update user guide

--- a/doc/guide/ug.tex
+++ b/doc/guide/ug.tex
@@ -23,175 +23,16 @@
 \pagestyle{fancy}
 
 % main contents
-\chapter{INTRODUCTION}
-\section{What's {\iqist}?}
-\section{Motivation}
-\section{Software architecture}
-\section{Main features}
-\section{Development history}
-\section{Policy and licences}
-
-\chapter{INSTALLATION}
-\section{Obtain}
-\section{Uncompress}
-\section{Direcrory structures}
-\section{Compiling environment}
-\section{Compiling system}
-\section{Build impurity solvers}
-\section{Build auxiliary tools}
-\section{Build documents}
-\section{Build application programming interfaces}
-
-\chapter{RUNNING}
-\section{Configure your system}
-\section{Create input files}
-\section{Execute codes}
-\section{Monitor and Profile}
-
-\chapter{STANDARD INPUT FILES}
-\section{solver.ctqmc.in}
-\section{solver.eimp.in}
-\section{solver.hyb.in}
-\section{solver.anydos.in}
-\section{solver.ktau.in}
-\section{atom.cix}
-
-\chapter{STANDARD OUTPUT FILES}
-\section{Terminal output}
-\subsection{out.dat}
-\section{File output}
-\subsection{solver.green.dat}
-\subsection{solver.green.bin}
-\subsection{solver.weiss.dat}
-\subsection{solver.hybrid.dat}
-\subsection{solver.grn.dat}
-\subsection{solver.wss.dat}
-\subsection{solver.hyb.dat}
-\subsection{solver.sgm.dat}
-\subsection{solver.hub.dat}
-\subsection{solver.nmat.dat}
-\subsection{solver.schi.dat}
-\subsection{solver.ochi.dat}
-\subsection{solver.twop.dat}
-\subsection{solver.vrtx.dat}
-\subsection{solver.hist.dat}
-\subsection{solver.prob.dat}
-\subsection{solver.kernel.dat}
-\subsection{solver.status.dat}
-
-\chapter{PARAMETERS}
-\section{isscf}
-\section{issun}
-\section{isspn}
-\section{isbin}
-\section{isort}
-\section{isvrt}
-\section{isscr}
-\section{nband}
-\section{nspin}
-\section{norbs}
-\section{ncfgs}
-\section{nzero}
-\section{nvect}
-\section{nhmat}
-\section{nfmat}
-\section{niter}
-\section{U}
-\section{Uc}
-\section{Uv}
-\section{Jz}
-\section{Js}
-\section{Jp}
-\section{lc}
-\section{wc}
-\section{mune}
-\section{beta}
-\section{part}
-\section{alpha}
-\section{lemax}
-\section{legrd}
-\section{chmax}
-\section{chgrd}
-\section{mkink}
-\section{mfreq}
-\section{nffrq}
-\section{nbfrq}
-\section{nfreq}
-\section{ntime}
-\section{nleja}
-\section{npart}
-\section{nflip}
-\section{ntherm}
-\section{nsweep}
-\section{nwrite}
-\section{nclean}
-\section{nmonte}
-\section{ncarlo}
-
-\chapter{AUXILIARY TOOLS}
-\section{{\jasmine} component}
-\section{{\hibiscus} component}
-\subsection{Maximum entropy method: entropy1}
-\subsection{Maximum entropy method: entropy2}
-\subsection{Stochastic analytical continuation: sac}
-\subsection{Analytical continuation for self-energy: swing}
-\subsection{toolbox/makechi}
-\subsection{toolbox/makedos}
-\subsection{toolbox/makekra}
-\subsection{toolbox/makescr}
-\subsection{toolbox/makesig}
-\subsection{toolbox/makestd}
-\subsection{toolbox/maketau}
-\subsection{toolbox/makeups}
-\subsection{script/pysci.py}
-\subsection{script/check.py}
-\section{Parquet component}
-
-\chapter{APPLICATION PROGRAMMING INTERFACES}
-\section{Fortran binding}
-\section{Python binding}
-\section{iqist.py}
-
-\chapter{{\iqist} IN ACTION}
-\section{Basic applications}
-\subsection{Hello {\iqist}!}
-\subsection{Mott metal-insulator transition}
-\section{Advanced applications I: Complex systems}
-\subsection{General Coulomb interaction}
-\subsection{Spin-orbital coupling}
-\subsection{Crystal field splitting}
-\subsection{Retarded interaction and dynamical screening effect}
-\section{Advanced applications II: Accurate measurement of physical observables}
-\subsection{One-shot and self-consistent calculations}
-\subsection{Data binning mode}
-\subsection{Imaginary-time Green's function}
-\subsection{Matsubara Green's function and self-energy function}
-\subsection{Spin-spin correlation function and orbital-orbital correlation function}
-\subsection{Two-particle Green's function and vertex function}
-\section{Advanced applications III: post-processing procedures}
-\subsection{Analytical continuation for imaginary-time Green's function}
-\subsection{Analytical continuation for Matsubara self-energy function}
-\section{Practical exercises}
-\subsection{Orbital-selective Mott transition in two-band Hubbard model}
-\subsection{Orbital Kondo and spin Kondo effects in three-band Anderson impurity model}
-
-\chapter{INSIDE {\iqist}}
-\section{Basic theory and methods}
-\subsection{Quantum impurity model}
-\subsection{Principles of continuous-time quantum Monte Carlo algorithm}
-\subsection{Hybridization expansion}
-\subsection{Physical observables}
-\subsection{Two-particle measurements and DMFT + Parquet formalism}
-\section{Implementations and optimizations}
-\subsection{Development platform}
-\subsection{Orthogonal polynomial representation}
-\subsection{Improved estimator for the self-energy function}
-\subsection{Random number generators}
-\subsection{Subspaces and symmetry}
-\subsection{Truncation approximation}
-\subsection{Lazy trace evaluation}
-\subsection{Divide-and-conquer and sparse matrix tricks}
-\subsection{Parallelization}
+\include{chapter/chap1}
+\include{chapter/chap2}
+\include{chapter/chap3}
+\include{chapter/chap4}
+\include{chapter/chap5}
+\include{chapter/chap6}
+\include{chapter/chap7}
+\include{chapter/chap8}
+\include{chapter/chap9}
+\include{chapter/chap10}
 
 \backmatter
 \pagestyle{plain}
