try to update the user guide

--- a/doc/guide/ug.tex
+++ b/doc/guide/ug.tex
@@ -19,6 +19,11 @@
 % tables
 \listoftables
 
+% preface contents
+\include{chapter/ack}
+\include{chapter/new}
+\include{chapter/usage}
+
 \mainmatter
 \pagestyle{fancy}
 
