--- a/src/ctqmc/gardenia/alps/simulation.dat.1
+++ b/src/ctqmc/gardenia/alps/simulation.dat.1
@@ -1,21 +1,21 @@
 simulation details:
 average sign: 1
-total number of Monte Carlo updates: 35826300
-total number of Monte Carlo measurements: 357263
-total number of imaginary time measurements: 35726300
+total number of Monte Carlo updates: 104343200
+total number of Monte Carlo measurements: 1042432
+total number of imaginary time measurements: 104243200
 number thermalization sweeps: 1000
-inverse temperature: 10
+inverse temperature: 2
 perturbation order:
-orbital 0: 4.4682
-orbital 1: 4.46916
+orbital 0: 0.573782
+orbital 1: 0.574056
 
-|------ Simulation details (master only) after 358263 sweeps ------|
-  Total acceptance rate = 27.69%
+|------ Simulation details (master only) after 1043432 sweeps ------|
+  Total acceptance rate = 20.88%
   Individual acceptance rate for update 
-     change zero state    = 0.00% (proposal rate = 10.00%)
-     insert segment       = 7.69% (proposal rate = 25.00%)
-     remove segment       = 7.69% (proposal rate = 24.99%)
-     insert anti-segment  = 6.15% (proposal rate = 20.01%)
-     remove anti-segment  = 6.15% (proposal rate = 20.00%)
+     change zero state    = 0.69% (proposal rate = 10.00%)
+     insert segment       = 5.61% (proposal rate = 25.00%)
+     remove segment       = 5.61% (proposal rate = 25.00%)
+     insert anti-segment  = 4.49% (proposal rate = 20.00%)
+     remove anti-segment  = 4.48% (proposal rate = 20.00%)
      swap segment         = 0.00% (proposal rate = 0.00%)
 |-----------------------------------------------------------------|
