narcissus in debug mode

--- a/src/ctqmc/narcissus/test1/ctqmc.param.1
+++ b/src/ctqmc/narcissus/test1/ctqmc.param.1
@@ -1,10 +1,11 @@
 MEASURE_time : 1
 MEASURE_nnt : 16
 TEXT_OUTPUT : 1
-SEED : 1418218802
+SEED : 1418234977
 N_MATSUBARA : 256
-SWEEPS : 200000000
 N_TAU : 1023
+SWEEPS : 200000000
+RET_INT_K : K.dat
 N_nn : 256
 J : 0.0
 N_ORBITALS : 2
